k8s/group-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: group
  labels:
    app: group
spec:
  selector:
    app: group
  ports:
    - port: 8080
      name: http
  type: NodePort
