k8s/group-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: group-vs
spec:
  hosts:
    - "*"
  gateways:
    - springdemo-gateway
  http:
    - match:
        - uri:
            prefix: "/groups"
      route:
        - destination:
            port:
              number: 8080
            host: group
